# Coursework_3_account_operations

./: README.md  main.py  operations.json  pyproject.toml
tests/: test_main.py
